Update DTOs for OrderController